Fixes on scrollbar enable for screen height smallest than 800px

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,22 @@ body {
   background-color: #242424;
 }
 
+* {
+  scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, .2);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #242424;
+}
+
 body:nth-child(n) {
   width: 100%;
 }
